Add page listing source repos for project

--- a/hubsrht/templates/project-resource-new.html
+++ b/hubsrht/templates/project-resource-new.html
@@ -16,7 +16,7 @@
       <li class="nav-item">
         <a
           class="nav-link"
-          href="{{url_for("projects.project_GET",
+          href="{{url_for("projects.summary_GET",
             owner=owner.canonical_name, project_name=project.name)}}"
         >{{icon('caret-left')}}&nbsp;back</a>
       </li>
