Add basic mailing lists support

--- a/hubsrht/templates/project-mailing-lists.html
+++ b/hubsrht/templates/project-mailing-lists.html
@@ -15,16 +15,15 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10 event-list">
-      {% for repo in sources %}
+      {% for mailing_list in mailing_lists %}
       <div class="event">
         <h4>
-          <a href="{{repo.url()}}">~{{owner.username}}/{{repo.name}}</a>
-          <small class="pull-right">
-            {{ repo.repo_type.value }}
-          </small>
+          <a
+            href="{{mailing_list.url()}}"
+          >~{{owner.username}}/{{mailing_list.name}}</a>
         </h4>
-        {% if repo.description %}
-        <p>{{ repo.description }}</p>
+        {% if mailing_list.description %}
+        {{ mailing_list.description | md }}
         {% endif %}
       </div>
       {% endfor %}
@@ -33,10 +32,10 @@
     {% if current_user and current_user.id == owner.id %}
     <div class="col-md-2">
       <a
-        href="{{url_for("projects.sources_new_GET",
+        href="{{url_for("projects.mailing_lists_new_GET",
                 owner=owner.canonical_name, project_name=project.name)}}"
         class="btn btn-primary btn-block"
-      >Add repository&nbsp;{{icon('caret-right')}}</a>
+      >Add mailing list&nbsp;{{icon('caret-right')}}</a>
     </div>
     {% endif %}
   </div>
