--- a/hubsrht/templates/project-sources-select.html
+++ b/hubsrht/templates/project-sources-select.html
@@ -34,6 +34,7 @@
       </button>
     </div>
   </div>
+  {% if any(repos) %}
   <div class="row">
     <div class="col-lg-8">
       <h3 style="margin-top: 1rem">
@@ -70,5 +71,6 @@
       </div>
     </div>
   </div>
+  {% endif %}
 </form>
 {% endblock %}
