--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -123,7 +123,19 @@
   <div class="row">
     {% if project.summary_repo_id != None %}
     <div class="col-md-10">
+      {% if current_user and current_user.id == project.owner_id and not summary %}
+      <div class="alert alert-danger">
+        <strong>Head's up!</strong> This project is configured to use the
+        README.md file from
+        <a href="{{project.summary_repo.url()}}">
+          {{project.summary_repo.owner.canonical_name}}/{{project.summary_repo.name}}
+        </a>
+        as the project summary - but there is no such file. Push a README.md
+        file to update the project summary.
+      </div>
+      {% else %}
       {{summary | extended_md}}
+      {% endif %}
     </div>
     {% elif current_user and current_user.id == project.owner_id %}
     <div class="col-md-8 offset-md-2">
