--- a/hubsrht/templates/mailing-list-new.html
+++ b/hubsrht/templates/mailing-list-new.html
@@ -1,4 +1,4 @@
-{% extends "project-resource-new.html" %}
+{% extends "resource-new.html" %}
 {% block content %}
 <form method="POST">
   {{csrf_token()}}
