--- a/hubsrht/templates/sources.html
+++ b/hubsrht/templates/sources.html
@@ -1,66 +1,29 @@
-{% extends "layout.html" %}
-{% block body %}
-<div class="header-tabbed">
-  <div class="container">
-    {% include 'project-nav.html' %}
-  </div>
+{% extends "resource-list.html" %}
+{% block resource_list %}
+{% for repo in sources %}
+<div class="event">
+  <h4>
+    <a href="{{repo.url()}}">~{{owner.username}}/{{repo.name}}</a>
+    <small class="pull-right">
+      {{ repo.repo_type.value }}
+    </small>
+  </h4>
+  {% if repo.description %}
+  <p>{{ repo.description }}</p>
+  {% endif %}
 </div>
-{% if project.description %}
-<div class="header-extension">
-  <div class="container">
-    {{ project.description }}
-  </div>
-</div>
-{% endif %}
-<form class="container">
-  <div class="row">
-    {% if current_user and current_user.id == owner.id %}
-    <div class="form-group col-md-12">
-    {% else %}
-    <div class="form-group col-md-10">
-    {% endif %}
-      <input
-        name="search"
-        type="text"
-        placeholder="Search repositories"
-        class="form-control{% if search_error %} is-invalid{% endif %}"
-        value="{{ search if search else "" }}" />
-      {% if search_error %}
-        <div class="invalid-feedback">{{ search_error }}</div>
-      {% endif %}
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-10 event-list">
-      {% for repo in sources %}
-      <div class="event">
-        <h4>
-          <a href="{{repo.url()}}">~{{owner.username}}/{{repo.name}}</a>
-          <small class="pull-right">
-            {{ repo.repo_type.value }}
-          </small>
-        </h4>
-        {% if repo.description %}
-        <p>{{ repo.description }}</p>
-        {% endif %}
-      </div>
-      {% endfor %}
-      {{pagination()}}
-    </div>
-    {% if current_user and current_user.id == owner.id %}
-    <div class="col-md-2">
-      <a
-        href="{{url_for("sources.new_GET",
-                owner=owner.canonical_name, project_name=project.name)}}"
-        class="btn btn-primary btn-block"
-      >Add repository&nbsp;{{icon('caret-right')}}</a>
-      <a
-        href="{{url_for("sources.manage_GET",
-                owner=owner.canonical_name, project_name=project.name)}}"
-        class="btn btn-default btn-block"
-      >Manage sources&nbsp;{{icon('caret-right')}}</a>
-    </div>
-    {% endif %}
-  </div>
-</form>
+{% endfor %}
+{% endblock %}
+
+{% block sidebar %}
+<a
+  href="{{url_for("sources.new_GET",
+          owner=owner.canonical_name, project_name=project.name)}}"
+  class="btn btn-primary btn-block"
+>Add repository&nbsp;{{icon('caret-right')}}</a>
+<a
+  href="{{url_for("sources.manage_GET",
+          owner=owner.canonical_name, project_name=project.name)}}"
+  class="btn btn-default btn-block"
+>Manage sources&nbsp;{{icon('caret-right')}}</a>
 {% endblock %}
