--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -1,17 +1,5 @@
-{% extends "layout.html" %}
-{% block body %}
-<div class="header-tabbed">
-  <div class="container">
-    {% include 'project-nav.html' %}
-  </div>
-</div>
-{% if project.description %}
-<div class="header-extension">
-  <div class="container">
-    {{ project.description }}
-  </div>
-</div>
-{% endif %}
+{% extends "project-base.html" %}
+{% block content %}
 <div class="container">
   <div class="row">
     <div class="col-md-12 event-list">
