--- a/hubsrht/templates/resource-new.html
+++ b/hubsrht/templates/resource-new.html
@@ -18,7 +18,7 @@
           class="nav-link"
           href="{{url_for("projects.summary_GET",
             owner=owner.canonical_name, project_name=project.name)}}"
-        >{{icon('caret-left')}}&nbsp;back</a>
+        >{{icon('caret-left')}}&nbsp;cancel</a>
       </li>
     </ul>
   </div>
