Git is stylized as "Git"

--- a/hubsrht/templates/sources-new.html
+++ b/hubsrht/templates/sources-new.html
@@ -11,7 +11,7 @@
             owner=owner, project_name=project.name)}}"
         >Add git repositories&nbsp;{{icon('caret-right')}}</a>
         <h3 style="border: none; padding-bottom: 0">
-          git
+          Git
         </h3>
       </div>
       <div class="event">
