--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -110,7 +110,8 @@
   <div class="row">
     {% if project.summary_repo_id != None %}
     <div class="col-md-10">
-      {% if current_user and current_user.id == project.owner_id and not summary %}
+      {% if current_user and current_user.id == project.owner_id
+        and not summary and not summary_error %}
       <div class="alert alert-danger">
         <strong>Head's up!</strong> This project is configured to use
         "<code>README.md</code>" from
@@ -125,7 +126,13 @@
         >choose a different repository</a>.
       </div>
       {% else %}
+      {% if not summary_error %}
       {{summary | extended_md}}
+      {% else %}
+      <div class="alert alert-danger">
+        An internal error occured fetching the README.md for this project.
+      </div>
+      {% endif %}
       {% endif %}
     </div>
     {% elif current_user and current_user.id == project.owner_id %}
